--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -7,7 +7,7 @@ display:
   source_url: https://github.com/naokikimura/dscar-reek
 
 orbs:
-  dscar: naokikimura/dscar@0.9.0
+  dscar: moneyforward/dscar@1.0.0
 
 executors:
   default:
