--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -3,8 +3,8 @@ version: 2.1
 description: Delta Reek reports
 
 display:
-  home_url: https://github.com/naokikimura/dscar-reek
-  source_url: https://github.com/naokikimura/dscar-reek
+  home_url: https://corp.moneyforward.com/
+  source_url: https://github.com/moneyforward/dscar-reek
 
 orbs:
   dscar: moneyforward/dscar@1.0.0
