--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -7,7 +7,7 @@ display:
   source_url: https://github.com/moneyforward/dscar-reek
 
 orbs:
-  dscar: moneyforward/dscar@1.0.1
+  dscar: moneyforward/dscar@1.0.2
 
 executors:
   default:
@@ -23,6 +23,7 @@ executors:
       git-base_revision:
         description: "Please set << pipeline.git-base_revision >>"
         type: string
+        default: '0000000000000000000000000000000000000000'
       git-revision:
         description: "Please set << pipeline.git-revision >>"
         type: string
